apps/pos/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pos
  namespace: pos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pos
  template:
    metadata:
      labels:
        app: pos
    spec:
      template:
        spec:
          imagePullSecrets:
            - name: ghcr-secret
      containers:
        - name: pos
          image: git@github.com:zuppler/pos-backend:latest
          ports:
            - containerPort: 8080
            - containerPort: 8081
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
